// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eCPM aAPI should return an error when the client could not be found 1`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId",
  "TableName": "test-client-table",
}
`;

exports[`eCPM aAPI should return an error when the record could not be found 1`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId",
  "TableName": "test-client-table",
}
`;

exports[`eCPM aAPI should return an error when the record could not be found 2`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
    "#date": "date",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
    ":date": Object {
      "S": "2000-01-01",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId AND #date = :date",
  "TableName": "test-ecpm-table",
}
`;

exports[`eCPM aAPI should return an error when the records are empty 1`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId",
  "TableName": "test-client-table",
}
`;

exports[`eCPM aAPI should return an error when the records are empty 2`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
    "#date": "date",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
    ":date": Object {
      "S": "2000-01-01",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId AND #date = :date",
  "TableName": "test-ecpm-table",
}
`;

exports[`eCPM aAPI should return an error when the secret is incorrect 1`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId",
  "TableName": "test-client-table",
}
`;

exports[`eCPM aAPI should return the eCPM 1`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId",
  "TableName": "test-client-table",
}
`;

exports[`eCPM aAPI should return the eCPM 2`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#clientId": "clientId",
    "#date": "date",
  },
  "ExpressionAttributeValues": Object {
    ":clientId": Object {
      "S": "appKey",
    },
    ":date": Object {
      "S": "2000-01-01",
    },
  },
  "KeyConditionExpression": "#clientId = :clientId AND #date = :date",
  "TableName": "test-ecpm-table",
}
`;
